--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <spring-context.version>5.2.9.RELEASE</spring-context.version>
     <spring-beans.version>5.2.9.RELEASE</spring-beans.version>
     <spring-webmvc.version>5.2.9.RELEASE</spring-webmvc.version>
+    <servlet-api.verson>2.5</servlet-api.verson>
 
     <jstl.version>1.2</jstl.version>
 
@@ -69,6 +70,13 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>${jstl.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>${servlet-api.verson}</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
