--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <junit.version>4.11</junit.version>
 
@@ -27,8 +27,9 @@
     <spring-beans.version>5.2.9.RELEASE</spring-beans.version>
     <spring-webmvc.version>5.2.9.RELEASE</spring-webmvc.version>
     <servlet-api.verson>2.5</servlet-api.verson>
-
     <jstl.version>1.2</jstl.version>
+
+    <hibernate-validator.version>6.1.0.Final</hibernate-validator.version>
 
   </properties>
 
@@ -77,6 +78,12 @@
       <artifactId>servlet-api</artifactId>
       <version>${servlet-api.verson}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
     </dependency>
 
   </dependencies>
